--- a/config.json
+++ b/config.json
@@ -1,5 +1,11 @@
 {
-    "userDataDir": "C:\\Users\\YourUser\\AppData\\Local\\Google\\Chrome\\User Data",
-    "email": "test",
-    "password": "test123"
+    "users": [
+        {
+            "userDataDir": "C:\\Users\\YourUser\\AppData\\Local\\Google\\Chrome\\User Data",
+            "email": "test",
+            "password": "test123",
+            "name": "tt"
+        }
+    ]
+
 }
