added compatibility for older version of config json

--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
             "userDataDir": "C:\\Users\\YourUser\\AppData\\Local\\Google\\Chrome\\User Data",
             "email": "test",
             "password": "test123",
-            "name": "tt"
+            "name": "tt",
+            "profileName": "profile 1"
         }
     ]
 
