updated action permission

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,6 @@
 name: Unlock-NetEaseMusic
-
+permissions:
+  contents: read
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
