--- a/.github/workflows/update_chromedriver.yml
+++ b/.github/workflows/update_chromedriver.yml
@@ -55,6 +55,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add ./chromedriver/win64/chromedriver.exe
           git commit -m "Updated Chromedriver-win64 to version ${LATEST_VERSION}"
+          git pull
           git push
   
 
@@ -108,6 +109,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add ./chromedriver/linux64/chromedriver
           git commit -m "Updated Chromedriver-linux64 to version ${LATEST_VERSION}"
+          git pull
           git push
 
     
